# field-level-mapping-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  extensions.py  manage.py  mapping_template_sheets.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: i18n.yml  lint.yml
locale/: messages.pot
locale/es/LC_MESSAGES/: messages.po
template_generator/: extensions.py  mapping_template_sheets.py
