[project]
name = "field-level-mapping-template"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # ignore incompatible rules
  "D200",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "D1",  # docstrings
  "PTH",  # pathlib
  "S603",  # subprocess call
  "S607",  # partial executable path
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]  # no __init__.py file
"tests/*" = [
  "D",  # docstring
  "PLR0913",  # Too many arguments to function call
  "PLR2004",  # Magic value used
  "S101",  # assert
]
