[project]
name = "field-level-mapping-template"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
